--- a/Source/WPF/MyMoney/Dialogs/AccountDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/AccountDialog.xaml
@@ -3,7 +3,8 @@
         xmlns:local="clr-namespace:Walkabout.Dialogs"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        mc:Ignorable="d"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:help="clr-namespace:Walkabout.Help"
         xmlns:c="clr-namespace:Walkabout.Controls"
@@ -35,7 +36,7 @@
         </Style>
     </local:BaseDialog.Resources>
 
-    <StackPanel Margin="20,20,20,20">
+    <StackPanel Margin="20" Orientation="Vertical">
         <Grid  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
@@ -81,7 +82,7 @@
             <TextBlock Text="Account Number:" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" />
             <TextBox x:Name="TextBoxAccountNumber" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="2" HorizontalAlignment="Stretch"  Text="{Binding Path=AccountId, Mode=TwoWay}"  TabIndex="1"/>
 
-            <TextBlock Text="Onliine Account Id:" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right" />
+            <TextBlock Text="Online Account Id:" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right" />
             <TextBox x:Name="TextBoxOnlineAccountNumber" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="4" HorizontalAlignment="Stretch"  Text="{Binding Path=OfxAccountId, Mode=TwoWay}" TabIndex="2"
                      ToolTip="Use this field if your bank uses a differently formatted string for your online account number"/>
 
@@ -153,7 +154,8 @@
 
         </Grid>
 
-        <StackPanel Margin="0,14,0,0" Orientation="Horizontal" Grid.Column="2" Grid.Row="16" HorizontalAlignment="Right" >
+        <!-- OK or Cancel -->
+        <StackPanel Margin="0,14,0,0" Orientation="Horizontal" HorizontalAlignment="Right" >
             <Button x:Name="ButtonOk"  IsDefault="True" Width="72" Margin="0,0,0,0" Click="OnButtonOk">OK</Button>
             <Button x:Name="ButtonCancel" IsCancel="True" Width="72" Margin="12,0,0,0" Click="OnCancel">Cancel</Button>
         </StackPanel>
