--- a/Source/WPF/MyMoney/Views/TransactionsView.xaml
+++ b/Source/WPF/MyMoney/Views/TransactionsView.xaml
@@ -432,7 +432,7 @@
                              ItemsSource="{Binding Path=NonNullSplits.ObservableCollection}">
 
                         <ListBox.ItemContainerStyle>
-                            <Style TargetType="ListBoxItem" BasedOn="{StaticResource DefaultListBoxItemStyle}">
+                            <Style TargetType="ListBoxItem">
                                 <Setter Property="Height" Value="22" />
                             </Style>
                         </ListBox.ItemContainerStyle>
